--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | QR code component</title>
-<link rel="stylesheet" href="./style.css">
- 
+  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
 
   <article>
-    Improve your front-end skills by building projects
-  
-    Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+    <img src="./images/image-qr-code.png" alt="">
+    <h3 class="outfit-bold">Improve your front-end skills by building projects</h3>
+
+    <p class="outfit-regular">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </article>
-  
+
 </body>
+
 </html>
